# multi-agent-dg

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
discourse_graph/: __init__.py  agent.py  graph.py  io.py  models.py  namespaces.py  ontology_dg.py  ontology_eng.py  policy.py  report.py  shapes.py  viz.py
docs/: ARCHITECTURE.md  BOM.md  DESIGN.md  REQUIREMENTS.md  WORKPLAN.md
notebooks/: CLAUDE.md  discourse_graph_demo.py
notebooks/__marimo__/session/: discourse_graph_demo.py.json
tests/: test_agent.py  test_graph.py  test_ingest.py  test_invariants.py  test_io.py  test_models.py  test_ontology_dg.py  test_ontology_eng.py  test_policy.py  test_query.py  test_shacl.py
