[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discourse-graph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.0",
    "pyshacl>=0.25",
    "pydantic>=2.0",
    "networkx>=3.2",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
notebook = ["marimo>=0.10"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
